--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -291,7 +291,7 @@ h3{
     flex-wrap: wrap;
     gap: 5px;
     justify-content: center;
-    margin-top: 10px;
+    margin-bottom: -10px;
   }
   
   /* Botón de horario */
@@ -324,7 +324,6 @@ h3{
     border: 1px solid #ddd;
     color: white;
     padding: 0px;
-    margin-top: 5px;
     border-radius: 8px;
     display: flex;
     justify-content: space-between; /* Espacia los elementos */
@@ -436,10 +435,8 @@ h3{
     justify-content: center; /* Centrar horizontalmente */
     align-items: center; /* Centrar verticalmente */
     gap: 10px; /* Espacio entre los botones */
-    margin-top: 20px; /* Separación superior */
     margin-bottom: -15px;
 }
-
 
 .button.reservar {
     background-color: #6c63ff;
@@ -471,6 +468,9 @@ h3{
     gap: 15px; /* Espacio entre los botones */
     justify-content: start;
     align-items: center; /* Asegura que los radios y los textos estén alineados verticalmente */
+    width: 94.5%; /* Asegura que ocupe todo el ancho disponible */
+    font-size: 15px;
+    border: none; /* Elimina cualquier borde */
 }
 
 .alergias-input-field label {
@@ -488,7 +488,6 @@ h3{
 }
 
 .radio-alergias {
-    
     margin: 0; /* Eliminar márgenes innecesarios */
 }
 
@@ -518,7 +517,7 @@ h3{
     margin-bottom: 20px;
 }
 
-.confirmation-modal-content button {
+button.confirmation-modal-content  {
     padding: 10px 20px;
     background-color: #6c63ff;
     border: none;
@@ -526,11 +525,28 @@ h3{
     font-size: 16px;
     cursor: pointer;
     border-radius: 4px;
+    margin-bottom: auto;
 }
 
 .confirmation-modal-content button:hover {
     background-color: #4e4ab7;
 }
+
+.error-message {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 5px;
+}
+
+.error-message-consulta {
+    color: red;
+    grid-column: span 2; /* Ocupar ambas columnas del grid */
+    display: flex;
+    font-size: 0.9em;
+    margin-top: 5px;
+    text-align: center;
+}
+
 
 @media (max-width: 600px) {
     .alergias-textarea {
