--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -311,7 +311,7 @@ h3{
     padding: 10px;
     border-radius: 8px;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 15px;
     transition: all 0.3s ease;
 }
 
@@ -338,7 +338,6 @@ h3{
     font-size: 14px;
 }
 
-  
   /* Estilo del cuadro de selección */
   .seleccion-info {
     background-color: #4e4ab7;
