--- a/frontend/src/css/MisReservas.css
+++ b/frontend/src/css/MisReservas.css
@@ -57,9 +57,16 @@
 
 .button-group {
     display: flex;
-    justify-content: flex-end;
-    gap: 10px;
+    align-items: center;
     margin-top: 10px;
+    margin-bottom: -10px;
+}
+
+.botones-derecha {
+    display: flex;
+    gap: 10px;
+    margin-bottom: -5px;
+    margin-left: auto; /* Fija los botones a la derecha */
 }
 
 .reservas-list button {
@@ -148,10 +155,160 @@
     text-decoration: none;
     color: #4CAF50; /* Verde acorde a tu estilo */
     font-weight: bold;
+    margin-top: -7px;
 }
 
 .icono-descarga {
     margin-right: 5px;
+    margin-top: -5px;
 }
 
+.descarga-pdf {
+    margin-top: -10px;
+}
+
+.descarga-pdf a {
+    display: flex;
+    align-items: center;
+    color: #1559a1;
+    font-weight: bold;
+    text-decoration: none;
+    margin-left: 2px;
+}
+
+.icono-descarga-pdf {
+    margin-right: 10px;
+    width: 17px;
+    height: 17px;
+}
+
+.filtros-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+
+.filtros-container label {
+    font-size: 16px;
+    font-weight: 500; /* Un poco más grueso que normal */
+    font-family: 'Inter', sans-serif;
+    color: #333;
+    margin-top: 7px;
+}
+
+.filtros-container select {
+    padding: 9px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 15px;
+    color: #333;
+    background-color: #fff;
+    width: 180px;
+    cursor: pointer;
+}
+
+.tipo-consulta-filter:focus {
+    outline: none;
+    border-color: #6c63ff;
+}
+
+.estado-filter:focus {
+    outline: none;
+    border-color: #6c63ff;
+}
+
+/* Contenedor del icono del calendario */
+.icono-calendario-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.icono-calendario-container:hover {
+    background-color: #ddd;
+}
+
+.icono-calendario-filter {
+    font-size: 20px;
+    color: #667;
+}
+
+.icono-calendario-filter:hover {
+    font-size: 20px;
+    color: rgb(7, 7, 7);
+}
+/* Estilos para el rango de fechas */
+.fecha-rango {
+    font-size: 15px;
+    color: #777;
+    margin-top: 5px;
+    display: block;
+}
+
+.fecha-rango-container {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    margin-bottom: 20px; /* Espacio entre los filtros y el texto */
+}
+
+/* Estilos específicos para el DatePicker dentro de MisReservas */
+.misreservas-container .react-datepicker {
+    position: absolute;
+    z-index: 100;
+    margin-top: 5px;
+}
+
+.filtro-label-icon {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espacio entre el label y el icono */
+}
+
+.paginacion {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+.boton-paginacion {
+    background: none;
+    border: none;
+    color: #392682;
+    cursor: pointer;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: color 0.3s, transform 0.2s;
+}
+
+.boton-paginacion:hover:not(:disabled) {
+    background: none;
+    border: none;
+    color: #332374;
+    transform: scale(1.1);
+}
+
+.boton-paginacion:disabled {
+    color: #ccc;
+    cursor: not-allowed;
+}
+
+.pagina-actual {
+    font-weight: bold;
+    font-size: 17px;
+    font-family: 'Inter', sans-serif;
+    color: #333;
+    margin-top: -18px;
+}
 
