--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -416,11 +416,6 @@ h3{
     margin-bottom: 5px; /* Separación entre calendario y tipo consulta */
 }
 
-/* Ajustar la separación entre el campo de hora y tipo de consulta */
-.calendar-picker {
-    margin-bottom: 8px; /* Añadir un pequeño espacio entre el calendario y el select */
-}
-
 .input-field:focus {
     outline: none;
     border-color: #6c63ff;
@@ -510,6 +505,61 @@ h3{
 
 .radio-alergias {
     margin: 0; /* Eliminar márgenes innecesarios */
+}
+
+.textarea-container,
+.input-container-motivo {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.char-count {
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.3); /* Color tenue */
+    pointer-events: none; /* No interfiere con la escritura */
+}
+
+.file-upload-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+}
+
+.custom-file-upload {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.upload-button {
+    background-color: #4e4ab7;
+    color: white;
+    padding: 9px 12px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 2px solid ;
+    transition: background-color 0.3s;
+    font-size: 12px;
+    font-weight: normal;
+    margin-top: -1px;
+    white-space: nowrap; /* Evita que el texto se divida en dos líneas */
+}
+
+.upload-button:hover {
+    background-color: #413e99;
+}
+
+.file-name {
+    font-size: 12px;
+    color: #301466;
+}
+
+.hidden-file-input {
+    display: none;
 }
 
 /* Estilo del modal de confirmación */
