--- a/frontend/src/css/MisReservas.css
+++ b/frontend/src/css/MisReservas.css
@@ -22,6 +22,12 @@
     justify-content: space-between;
 }
 
+.reservas-list li input[type="checkbox"] {
+    margin-top: -5px; /* Espaciado entre el checkbox y el contenido */
+    margin-left: 0; /* Elimina cualquier margen izquierdo */
+    order: -1; /* Mueve el checkbox al principio del contenedor */
+}
+
 .reservas-list li:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
@@ -342,3 +348,16 @@
     color: #333;
     margin-top: -18px;
 }
+
+.boton-cancelar-seleccionadas {
+    padding: 7px 10px; /* Reducir el tamaño del botón */
+    border: none;
+    border-radius: 5px;
+    background-color: #FF4C4C;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 0px;
+}
+
+
