--- a/frontend/src/css/Chatbot.css
+++ b/frontend/src/css/Chatbot.css
@@ -32,7 +32,8 @@
     position: absolute;
     bottom: 70px;
     right: 0;
-    width: 300px;
+    width: 350px;
+    height: 400px;
     background: white;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
@@ -54,7 +55,7 @@
     width: 20px; /* Ajusta el tamaño del logo */
     height: 20px;
     margin-left: 10px; /* Espacio entre el logo y el texto */
-    margin-right: -120px;
+    margin-right: -155px;
 }
 
 .chatbot-header h3{
@@ -63,7 +64,7 @@
 
 .chatbot-messages {
     padding: 10px;
-    height: 200px;
+    height: auto;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -72,7 +73,7 @@
 .chatbot-message {
     padding: 8px;
     border-radius: 5px;
-    margin-bottom: 5px;
+    margin-bottom: auto;
     max-width: 80%;
 }
 
@@ -91,6 +92,7 @@
     display: flex;
     padding: 10px;
     border-top: 1px solid #ddd;
+    margin-top: auto;
 }
 
 .chatbot-input input {
